--- a/FE/package.json
+++ b/FE/package.json
@@ -21,11 +21,12 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.417.0",
-    "next": "14.2.5",
+    "next": "^14.2.16",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "recharts": "^2.12.7",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.0",
     "tailwindcss-animate": "^1.0.7"
   },
